--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <name>mrs_uav_managers</name>
 
   <version>2.0.0</version>
-  <description>The mrs_uav_managers package</description>
+  <description>MRS UAV Managers</description>
 
   <author email="tomas.baca@fel.cvut.cz">klaxalk</author>
   <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>
