wip control manager, it loads controllers and trackers

--- a/config/private/control_manager.yaml
+++ b/config/private/control_manager.yaml
@@ -17,7 +17,7 @@ mrs_uav_managers:
       "MpcController",
       # "Se3Controller",
       # "FailsafeController",
-      # "EmergencyController",
+      "EmergencyController",
       # "MidairActivationController",
     ]
 
