--- a/config/private/control_manager.yaml
+++ b/config/private/control_manager.yaml
@@ -6,6 +6,7 @@ mrs_uav_managers:
     mrs_trackers : [
       "NullTracker",
       "LandoffTracker",
+      "LineTracker",
       # "MpcTracker",
       # "JoyTracker",
       # "SpeedTracker",
