mpc_tracker works

--- a/config/private/control_manager.yaml
+++ b/config/private/control_manager.yaml
@@ -7,7 +7,7 @@ mrs_uav_managers:
       "NullTracker",
       "LandoffTracker",
       "LineTracker",
-      # "MpcTracker",
+      "MpcTracker",
       # "JoyTracker",
       # "SpeedTracker",
       # "MidairActivationTracker",
