--- a/config/public/uav_manager.yaml
+++ b/config/public/uav_manager.yaml
@@ -3,8 +3,8 @@ mrs_uav_managers:
   uav_manager:
 
     # require gain or constraint manager running to takeoff?
-    require_gain_manager: true
-    require_constraint_manager: true
+    require_gain_manager: false # TODO set to true
+    require_constraint_manager: false # TODO set to true
 
     # periodically checks if max height was exceeded
     # if so, retakes control and descends below it
