--- a/config/private/control_manager.yaml
+++ b/config/private/control_manager.yaml
@@ -10,7 +10,7 @@ mrs_uav_managers:
       "MpcTracker",
       # "JoyTracker",
       # "SpeedTracker",
-      # "MidairActivationTracker",
+      "MidairActivationTracker",
     ]
 
     # list of names of dynamically loaded controllers
@@ -19,7 +19,7 @@ mrs_uav_managers:
       "Se3Controller",
       "FailsafeController",
       "EmergencyController",
-      # "MidairActivationController",
+      "MidairActivationController",
     ]
 
     #- this is the "do nothing tracker", which is active when no other is
