--- a/config/public/uav_manager.yaml
+++ b/config/public/uav_manager.yaml
@@ -3,7 +3,7 @@ mrs_uav_managers:
   uav_manager:
 
     # require gain or constraint manager running to takeoff?
-    require_gain_manager: false # TODO set to true
+    require_gain_manager: true
     require_constraint_manager: true
 
     # periodically checks if max height was exceeded
