--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_subdirectory(./land_home)
+add_subdirectory(./land_home_service)
 
-add_subdirectory(./land_home_moving_takeoff_frame)
+add_subdirectory(./land_home_moving_takeoff_frame_service)
 
-add_subdirectory(./land_there)
+add_subdirectory(./land_there_service)
+
+add_subdirectory(./land_service)
