bug fixed, + max height check

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(./land_home_moving_takeoff_frame_service)
 add_subdirectory(./land_there_service)
 
 add_subdirectory(./land_service)
+
+add_subdirectory(./max_height_check)
