--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(./land_there_service)
 add_subdirectory(./land_service)
 
 add_subdirectory(./max_height_check)
+
+add_subdirectory(./min_height_check)
