+ max throttle check

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -9,3 +9,5 @@ add_subdirectory(./land_service)
 add_subdirectory(./max_height_check)
 
 add_subdirectory(./min_height_check)
+
+add_subdirectory(./max_throttle_check)
