--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory(./max_height_check)
 add_subdirectory(./min_height_check)
 
 add_subdirectory(./max_throttle_check)
+
+add_subdirectory(./takeoff_service)
