fixed landing test

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(./min_height_check)
 add_subdirectory(./max_throttle_check)
 
 add_subdirectory(./takeoff_service)
+
+# add_subdirectory(./takeoff_fail_cause_controller_service)
