more offboard tests

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -25,5 +25,9 @@
 # add_subdirectory(./midair_service_fail_cause_enabling_output_failed)
 
 add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed)
+add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed_2)
+add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed_3)
+add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed_4)
+add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed_5)
 
 # add_subdirectory(./uav_manager_start_stop)
