--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -1,16 +1,16 @@
-# add_subdirectory(./land_home_service)
+add_subdirectory(./land_home_service)
 
-# add_subdirectory(./land_home_service_moving_takeoff_frame)
+add_subdirectory(./land_home_service_moving_takeoff_frame)
 
-# add_subdirectory(./land_there_service)
+add_subdirectory(./land_there_service)
 
-# add_subdirectory(./land_service)
+add_subdirectory(./land_service)
 
-# add_subdirectory(./max_height_check)
+add_subdirectory(./max_height_check)
 
-# add_subdirectory(./min_height_check)
+add_subdirectory(./min_height_check)
 
-# add_subdirectory(./max_throttle_check)
+add_subdirectory(./max_throttle_check)
 
 # add_subdirectory(./takeoff_service)
 
