--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -1,1 +1,19 @@
 add_subdirectory(./control_manager_start_stop)
+
+add_subdirectory(./goto_service)
+
+add_subdirectory(./goto_fcu_service)
+
+add_subdirectory(./goto_relative_service)
+
+add_subdirectory(./goto_altitude_service)
+
+add_subdirectory(./reference_service)
+
+add_subdirectory(./reference_local_origin_service)
+
+add_subdirectory(./reference_topic)
+
+add_subdirectory(./set_heading_service)
+
+add_subdirectory(./set_heading_relative_service)
