refactored estimator switching test

--- a/test/estimation_manager/switch_estimator_service/config/custom_config.yaml
+++ b/test/estimation_manager/switch_estimator_service/config/custom_config.yaml
@@ -11,8 +11,9 @@ mrs_uav_managers:
     state_estimators: [
       "gps_baro",
       "gps_garmin",
-      "rtk",
-      "rtk_garmin",
+      # "rtk",
+      # "rtk_garmin",
+      "passthrough",
     ]
 
     initial_state_estimator: "gps_baro" # will be used as the first state estimator
