--- a/config/public/constraint_manager/constraint_manager.yaml
+++ b/config/public/constraint_manager/constraint_manager.yaml
@@ -10,6 +10,7 @@ mrs_uav_managers:
       "other",
       "ground_truth",
       "passthrough",
+      "dummy",
     ]
 
     constraints: [
@@ -27,6 +28,7 @@ mrs_uav_managers:
       other: ["slow"]
       ground_truth: ["slow", "medium", "fast"]
       passthrough: ["slow", "medium", "fast"]
+      dummy: ["slow"]
 
     # those constraints will be used automatically when a localization mode switches
     # and the current constraints are not in the allowed list (next paragraphs)
@@ -38,3 +40,4 @@ mrs_uav_managers:
       other: "slow"
       ground_truth: "slow"
       passthrough: "slow"
+      dummy: "slow"
