--- a/config/private/control_manager.yaml
+++ b/config/private/control_manager.yaml
@@ -6,7 +6,7 @@ mrs_uav_managers:
     mrs_trackers : [
       "NullTracker",
       "LandoffTracker",
-      "LineTracker",
+      # "LineTracker",
       "MpcTracker",
       # "JoyTracker",
       # "SpeedTracker",
