+ eland control error test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -29,3 +29,5 @@ add_subdirectory(./transform_pose_service)
 add_subdirectory(./transform_reference_service)
 
 add_subdirectory(./transform_vector3_service)
+
+add_subdirectory(./eland_control_error)
