--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -33,3 +33,5 @@ add_subdirectory(./transform_vector3_service)
 add_subdirectory(./eland_control_error)
 
 add_subdirectory(./eland_innovation)
+
+add_subdirectory(./eland_service)
