refactored trajectory_start_stop_resume_service test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -41,3 +41,5 @@ add_subdirectory(./trajectory_topic)
 add_subdirectory(./hover_service)
 
 add_subdirectory(./failsafe_control_error)
+
+add_subdirectory(./trajectory_start_stop_resume_services)
