refactored escalating_failsafe_rc test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -45,3 +45,5 @@ add_subdirectory(./failsafe_control_error)
 add_subdirectory(./trajectory_start_stop_resume_services)
 
 add_subdirectory(./escalating_failsafe_service)
+
+add_subdirectory(./escalating_failsafe_rc)
