refactored bumper_with_goto test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -49,3 +49,5 @@ add_subdirectory(./escalating_failsafe_service)
 add_subdirectory(./escalating_failsafe_rc)
 
 add_subdirectory(./rc_remote_control)
+
+add_subdirectory(./bumper_with_goto)
