--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -51,3 +51,5 @@ add_subdirectory(./escalating_failsafe_rc)
 add_subdirectory(./rc_remote_control)
 
 add_subdirectory(./bumper_with_goto)
+
+add_subdirectory(./bumper_with_rc_control)
